--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   },
   "homepage": "https://github.com/victor95pc/tweet-verifier#readme",
   "dependencies": {
-    "html2canvas": "^1.0.0-rc.3"
+    "html2canvas": "^1.0.0-rc.3",
+    "wasm-loader": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
