--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
   },
   "homepage": "https://github.com/victor95pc/tweet-verifier#readme",
   "dependencies": {
-    "html2canvas": "^1.0.0-rc.3",
-    "wasm-loader": "^1.3.0"
+    "html2canvas": "^1.0.0-rc.3"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
+    "arraybuffer-loader": "^1.0.7",
     "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^5.0.3",
     "webpack": "^4.36.1",
