--- a/package.json
+++ b/package.json
@@ -44,6 +44,11 @@
     "babel-loader": "^8.0.6",
     "base64-inline-loader": "^1.1.1",
     "copy-webpack-plugin": "^5.0.3",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.2",
     "webpack": "^4.36.1",
     "webpack-cli": "^3.3.6"
   }
