--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "babel-loader": "^8.0.6",
     "base64-inline-loader": "^1.1.1",
     "copy-webpack-plugin": "^5.0.3",
+    "cross-env": "^5.2.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "^5.3.0",
