--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "Check if Tweets are real",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "chrome-build": "NODE_ENV=production webpack --env.NODE_ENV=production --config src/chrome/webpack.config.js",
-    "chrome-start": "NODE_ENV=development webpack --config src/chrome/webpack.config.js --watch"
+    "chrome-start": "NODE_ENV=development webpack --config src/chrome/webpack.config.js --watch",
+    "test": "node_modules/.bin/jest",
+    "test:coverage": "npm test -- --coverage",
+    "coveralls": "npm run test:coverage && cat ./coverage/lcov.info | coveralls"
   },
   "repository": {
     "type": "git",
@@ -41,9 +43,21 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "arraybuffer-loader": "^1.0.7",
+    "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
     "base64-inline-loader": "^1.1.1",
     "copy-webpack-plugin": "^5.0.3",
+    "coveralls": "^3.0.5",
+    "cross-env": "^5.2.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.2",
+    "jest": "^24.8.0",
+    "jest-raw-loader": "github:keplersj/jest-raw-loader",
     "webpack": "^4.36.1",
     "webpack-cli": "^3.3.6"
   }
